--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   },
   "homepage": "https://github.com/FE-star/exercise3#readme",
   "devDependencies": {
-    "karma": "^1.7.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
     "karma-mocha": "^1.3.0",
-    "mocha": "^3.5.0",
+    "mocha": "^6.0.2",
     "should": "^11.2.1"
+  },
+  "dependencies": {
+    "jQuery": "^1.7.4"
   }
 }
