--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "karma-jasmine": "^2.0.1",
     "karma-mocha": "^1.3.0",
     "mocha": "^6.0.2",
-    "should": "^11.2.1"
+    "should": "^11.2.1",
+    "jQuery": "^1.7.4"
   },
   "dependencies": {
-    "jQuery": "^1.7.4"
   }
 }
