--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: node_js
 node_js:
   - "8"
 before_script:
-  - npm install -g mocha
-  - npm install
+  - npm install -g karma-cli
   - cd test
-script: mocha
+script: karma start
