--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ node_js:
   - "8"
 before_script:
   - npm install -g karma-cli
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
   - cd test
-script: karma start
+script: karma start karma.conf.js --single-run
